# machine-dialect

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  CLI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLE.md  README.md  SECURITY.md  SYNTAX.md  Taskfile.yml  build_vm.sh  debug_bytecode.py  debug_list_tokens.py  debug_mixed_list.py  pyproject.toml  regression_report.txt  test.md  test_algebraic.md  test_algebraic_simple.md  test_bytecode.mdbc  test_bytecode_interop.py  test_jumps.md  test_jumps.mdbc  test_list_compilation.md  test_list_features.py  test_mir_bytecode.py  test_named_list_operations.py  test_opt.md  test_opt.mdbc  test_simple.md  test_simple.mdbc  test_simple_vm.py  test_vm_simple.py
.claude/commands/: generate-prompt.md  review-docstrings.md
.github/workflows/: publish-pypi.yml  publish-vm-pypi.yml  pypi-main-publish.yml  pypi-main-test.yml  pypi-vm-publish.yml  pypi-vm-test.yml  regression_tests.yml  release.yml  test-cross-platform.yml  test-pypi-deploy.yml  test-vm-pypi-deploy.yml
asimov/: rules.json  rules.py
benchmark/: Dockerfile  IMPLEMENTATION_STATUS.md  README.md  benchmark.sh  benchmark_results.json  docker-compose.yml  fib.c  fib.cpp  fib.js  fib.pl  fib.py  fib.rs  fibonacci.md  fibonacci.mdbc  fibonacci_correct.md  fibonacci_correct.mdbc  fibonacci_fixed.mdbc  fibonacci_raw.md  run_benchmark.py  simple_fib.md  visualize_results.py
docs/how-to-code/: EXAMPLE.md  variables.md
docs/implementation/: array_operations_emulation.md
docs/infra/: release-setup.md
docs/issues/: parser_bugs_from_edge_case_testing.md
docs/meta/: claude_prompting.md  docstrings_guide.md
machine_dialect/: __main__.py
machine_dialect/acceptance/: CFG_PARSER_LIMITATIONS.md  FEATURE_PARITY.md  __init__.py  integration_tests.py  parity_test_framework.py  test_advanced_features.py  test_error_handling.py  test_error_handling.py.disabled  test_interpreter_integration.py  test_interpreter_integration_proper.py  test_operators_comprehensive.py  test_string_features.py
machine_dialect/acceptance/tests/: __init__.py  test_integration.py
machine_dialect/ast/: README.md  __init__.py  ast_node.py  expression.py  expressions.py  literals.py  program.py  statement.py  statements.py
machine_dialect/ast/tests/: test_ast_string_representation.py  test_boolean_literal.py  test_collection_hir.py  test_define_statement.py  test_desugar.py
machine_dialect/cfg/: GPT5_README.md  README.md  __init__.py  config.py  examples.py  generate_with_ai.py  machine_dialect.lark  openai_generation.py  parser.py
machine_dialect/cfg/tests/: test_cfg_parser.py  test_generate_with_ai.py  test_openai_generation.py
machine_dialect/codegen/: README.md  __init__.py  bytecode_builder.py  bytecode_module.py  bytecode_serializer.py  codegen.py  constpool.py  emitter.py  isa.py  objects.py  opcodes.py  register_codegen.py  serializer.py  symtab.py  vm_serializer.py  vm_serializer.py.backup
machine_dialect/codegen/tests/: test_bytecode_serializer.py  test_codegen.py  test_register_codegen_ssa.py  test_serializer.py
machine_dialect/compiler/: __init__.py  compiler.py  config.py  context.py  pipeline.py  vm_runner.py
machine_dialect/compiler/phases/: __init__.py  codegen.py  hir_generation.py  mir_generation.py  optimization.py
machine_dialect/compiler/tests/: __init__.py
machine_dialect/errors/: __init__.py  exceptions.py  messages.py
machine_dialect/errors/tests/: test_expected_token_errors.py  test_name_errors.py
machine_dialect/helpers/: stopwords.py
machine_dialect/integration/: __init__.py  integration_tests.py
machine_dialect/integration/tests/: __init__.py  test_integration.py
machine_dialect/interpreter/: evaluator.py  objects.py
machine_dialect/lexer/: __init__.py  constants.py  lexer.py  tokens.py
machine_dialect/linter/: README.md  __init__.py  __main__.py  linter.py  violations.py
machine_dialect/mir/: __init__.py  basic_block.py  dataflow.py  debug_info.py  differential_validator.py  hir_to_mir.py  mir_dumper.py  mir_function.py  mir_instructions.py  mir_interpreter.py  mir_module.py  mir_printer.py  mir_to_bytecode.py  mir_to_bytecode.py.disabled  mir_transformer.py  mir_types.py  mir_validation.py  mir_values.py  optimization_config.py  optimization_pass.py  optimization_pipeline.py  optimize_mir.py  pass_manager.py  ssa_construction.py  type_inference.py
machine_dialect/parser/: README.md  __init__.py  enums.py  parser.py  protocols.py  symbol_table.py  token_buffer.py
machine_dialect/repl/: repl.py
machine_dialect/runtime/: README.md  __init__.py  builtins.py  errors.py  operators.py  types.py  values.py
machine_dialect/semantic/: __init__.py  analyzer.py
machine_dialect/tokens/: tokens.py
machine_dialect/type_checking/: __init__.py  type_system.py
machine_dialect/vm/: README.md  disasm.py  errors.py  frame.py  natives.py  objects.py  stack.py  vm.py
machine_dialect_vm/: Cargo.toml  README.md  __init__.pyi  pyproject.toml  test_vm.py
machine_dialect_vm/benches/: basic_benchmark.rs  vm_benchmark.rs
machine_dialect_vm/src/: lib.rs  main.rs
machine_dialect_vm/src/bindings/: mod.rs  pyo3_vm.rs
machine_dialect_vm/src/errors/: runtime.rs
machine_dialect_vm/src/instructions/: decoder.rs  executor.rs  opcodes.rs
machine_dialect_vm/src/loader/: bytecode.rs
machine_dialect_vm/src/runtime/: logic.rs
machine_dialect_vm/src/values/: constants.rs  types.rs  value.rs
machine_dialect_vm/src/vm/: engine.rs  state.rs
machine_dialect_vm/tests/: bytecode_roundtrip_test.rs  integration_test.rs
md_linter/: Cargo.toml
md_linter/src/: config.rs  main.rs
md_linter/src/rules/: md013.rs  mod.rs
scripts/: run_regression_tests.py
tests/: test_constant_pool_remapping.py  test_end_to_end_pipeline.py  test_end_to_end_recursive.py  test_end_to_end_simple.py  test_end_to_end_vm.py  test_opcode_compatibility.py  test_parser_parity.py  test_vm_execution.py  test_vm_integration.py
tests/integration/: test_array_execution.py  test_enhanced_type_tracking.py  test_while_loop_e2e.py
(+156 files in other folders)
