[project]
name = "machine-dialect"
version = "0.1.0"
description = "Machine Dialect - Natural language programming in Markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rfc3986>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["machine_dialect*"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pyupgrade>=3.20.0",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true

# Ignore import errors for libraries without type stubs
[[tool.mypy.overrides]]
module = ["rfc3986", "rfc3986.*"]
ignore_missing_imports = true

# Ignore misc errors in test files (mostly for pytest decorators)
[[tool.mypy.overrides]]
module = [
    "machine_dialect.lexer.tests.*",
    "machine_dialect.parser.tests.*",
    "machine_dialect.repl.tests.*"
]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["machine_dialect"]
pythonpath = []
