[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "machine-dialect-vm"
version = "0.1.0"
description = "High-performance Rust VM for Machine Dialect™"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Kenny Lajara"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[tool.maturin]
features = ["pyo3"]
module-name = "machine_dialect_vm"
